# deeplink.framework

./: .clang-format  .gitignore  .gitmodules  .markdownlint.json  CMakeLists.txt  Contributors.md  FAQ.md  QuickStart.md  README.md  SOP.md  ascend_build.sh  build.sh  fusion_result.json  readme.md  run_format.sh  setup.py  template_build _sh  template_build_sh  test_argmax.py  test_col2im.py  test_im2col.py  test_sgn.py  test_triu.py
dipu/: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  Contributors.md  FAQ.md  QuickStart.md  README.md  SupportedDiopiFunctions.txt  detect_env.py  dipu_autoload.sh  dipu_deinit.sh  dipu_envs.sh  dipu_init.sh  pyproject.toml  setup.py  template_build_sh
dipu/cmake/: BaseFuncions.cmake
dipu/scripts/autogen_diopi_wrapper/: auto_gen_code.sh  autogen_diopi_wrapper.py  autogen_wrapped_code.sh  custom_diopi_functions.yaml  diopi_functions.yaml  diopi_wrapper_template.py  infer_ops.yaml  op_memory_format_converter.py
dipu/scripts/ci/: ci_benchmark.sh  ci_build_pytorch.sh  ci_build_third_party.sh  ci_interruptible.sh  ci_one_iter.sh  ci_run_one_iter.py  ci_run_perf.py  cpplint.py  increment_coverage.sh  test_one_iter_large_language_model_list.yaml  test_one_iter_model_list.yaml  test_one_iter_traditional_model_list.yaml  test_perf_config.json
dipu/scripts/ci/ascend/: ci_ascend_env.sh  ci_ascend_script.sh
dipu/scripts/ci/camb/: ci_camb_env.sh  ci_camb_script.sh
dipu/scripts/ci/droplet/: ci_droplet_env.sh  ci_droplet_script.sh
dipu/scripts/ci/kunlunxin/: ci_kunlunxin_env.sh
dipu/scripts/ci/muxi/: ci_muxi_env.sh  ci_muxi_script.sh
dipu/scripts/ci/nv/: .gitignore  ci_nv_env.sh  ci_nv_run_one_iter.py  ci_nv_script.sh  ci_nv_tidy.sh
dipu/scripts/ci/topsrider/: ci_topsrider_env.sh  ci_topsrider_script.sh
dipu/scripts/op_capture/: op_capture.py
dipu/tests/: .dipu_force_fallback_op_list.config  common.sh  pytorch_config_cuda.py  pytorch_config_gcu.py  pytorch_config_global.py  pytorch_config_mlu.py  pytorch_config_muxi.py  pytorch_test_base.py  run_ascend_tests.sh  run_camb_tests.sh  run_enflame_test.sh  run_kunlunxin_tests.sh  run_muxi_tests.sh  run_nv_tests.sh  run_supa_test.sh  run_topsrider_tests.sh  test_stor1.pth
dipu/tests/cpp/: CMakeLists.txt  test_relu.cpp  test_tensor_add.cpp  testrt.cpp
dipu/tests/python/: README.md  run_tests.sh  test.py
dipu/tests/python/fix_needed/: test_bitwise_and.py  test_clamp.py  test_masked_fill.py  test_resnet.py
dipu/tests/python/individual_scripts/: generate_unittest_for_individual_scripts.py  local_eviron.py  test_allocator.py  test_allocator_conf.py  test_dipu_fallback.py  test_dipu_op_register.py  test_dipu_profiler.py  test_dumparg.py  test_format_cast.py  test_get_device_properties.py  test_memory_stats.py  test_metrics.py  test_multi_thread.py  test_ne.py  test_op_benchmark.py  test_profiler_communication.py  test_rt_ddp.py  test_rt_tensor.py  test_sync_bn.py
dipu/tests/python/special/: op_benchmark.py
dipu/tests/python/unittests/: stdout_redirector.py  test_abs.py  test_adamw.py  test_adaptive_avg_pool2d.py  test_adaptive_avg_pool2d_backward.py  test_add.py  test_addc.py  test_addmm.py  test_all.py  test_amax.py  test_amp.py  test_amp_init_dtype_multithread.py  test_any.py  test_arange.py  test_argmax.py  test_asstride.py  test_atan.py  test_avg_pool2d.py  test_baddbmm.py  test_batch_norm.py  test_batch_norm_backward.py  test_binary_cross_entropy.py  test_binary_cross_entropy_with_logits.py  test_bitwise_not.py  test_bitwise_or.py  test_bmm.py  test_cast.py  test_cat.py  test_cdist.py  test_ceil.py  test_clamp.py  test_conv2d.py  test_convtranspose2d.py  test_copy.py  test_cos.py  test_cross_entropy_loss.py  test_ctc_loss.py  test_cumsum.py  test_div.py  test_dropout.py  (+101 more)
dipu/tests/python/utils/: random_shape.py  stdout_redirector.py  test_in_subprocess.py
dipu/tests/test_ops/: test_softmax.py
dipu/tests/test_ops/archived/: op_benchmark.py  test_SyncBN.py  test_abs.py  test_adaptive_avg_pool2d.py  test_allocator.py  test_amp.py  test_atan.py  test_autocast.py  test_batch_norm.py  test_binary_cross_entropy.py  test_bitwise_or.py  test_cat.py  test_clamp.py  test_conv2d.py  test_copy.py  test_cos.py  test_ctc_loss.py  test_dipu_op_register.py  test_erfinv.py  test_fill.py  test_floor.py  test_forech_op.py  test_gather.py  test_ge.py  test_gelu.py  test_generator.py  test_group_norm.py  test_hardwish.py  test_index.py  test_index_select.py  test_layer_norm.py  test_log.py  test_mseloss_backward.py  test_mul.py  test_neg.py  test_norm.py  test_optim_foreach.py  test_pin_memory.py  test_prod.py  test_profiler.py  (+13 more)
dipu/tests/utils/: stdout_redirector.py
dipu/torch_dipu/: __init__.py
dipu/torch_dipu/csrc_dipu/: CMakeLists.txt  common.h  stub.cpp
dipu/torch_dipu/dipu/: __init__.py  amp.py  dataloader.py  device.py  dipu.py  distributed.py  generator.py  memory.py  nvtx.py  random_dipu.py  storages.py  streams.py  tensor.py  utils.py
dipu/torch_dipu/profiler/: README.md  __init__.py  profiler.py  readme.md
dipu/torch_dipu/utils/: distutis.py
test/ascend_scripts/test_ops/: CMakeLists.txt  run_ascend_tests.sh  test_ops.cmake
test/test_op/: CMakeLists.txt  conftest.py  run_test.sh  test_abs.py  test_add.py  test_exp.py  test_mm.py  test_op.cmake  utils.py
tests/cpp/: CMakeLists.txt  test_relu.cpp  test_tensor_add.cpp  testrt.cpp
torch_dipu/csrc_dipu/: CMakeLists.txt  common.cpp  common.h  stub.cpp
torch_dipu/csrc_dipu/aten/: CPUFallback.cpp  CpuFallback.cpp  DIPUATenFunctions.h  DIPUNativeFunctions.h  Device.h  RegisterDIPU.cpp  RegisterDIPU.hpp  RtOps.cpp  dipu_native_functions.yaml
torch_dipu/csrc_dipu/base/: DIPUGlobals.cpp  DIPUGlobals.h  basedef.h
torch_dipu/csrc_dipu/binding/: ExportProfiler.cpp  ExportRT.cpp  ExportTensor.cpp  PatchStorage.cpp  exportapi.h
torch_dipu/csrc_dipu/diopirt/: CMakeLists.txt  diopi.cpp  diopi.h  diopi_helper.cpp  diopirt.cpp  diopirt_impl.cpp  diopirt_impl.h
torch_dipu/csrc_dipu/profiler/: profiler.cpp  profiler.h
torch_dipu/csrc_dipu/runtime/: rthelper.h
torch_dipu/csrc_dipu/utils/: Log.h  helpfunc.cpp  helpfunc.hpp
(+1025 files in other folders)
